# reeftotem-assistant

./: .cspell.json  .env.example  .eslintrc.json  .gitignore  .prettierrc.json  .rustfmt.toml  AGENTS.md  CICD_IMPLEMENTATION_GUIDE.md  CLAUDE.md  LIVE2D_DEVELOPMENT_PLAN.md  README-Live2D.md  V0.1.3_功能测试清单.md  deny.toml  eslint.config.js  index.html  live2d-window.html  mkdocs.yml  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
.claude/: index.json
.claude/plan/: Live2D窗口透明度修复方案.md  Live2D透明度修复实施步骤.md  Tauri前后端通信修复.md  WebSocket-ASR迁移.md  voice-interaction-development-plan.md  音频转换修复.md
.github/workflows/: build-release.yml  ci.yml  docs.yml  maintenance.yml  security.yml
docs/: CODE_CLEANUP_SUMMARY.md  DRAG_EDGE_DETECTION_USAGE.md  LIVE2D_JSX_ARCHITECTURE.md  QUICK_START_BUSINESS_FLOW.md  TENCENT_CLOUD_BUSINESS_FLOW.md  TENCENT_CLOUD_VOICE_SETUP.md  TESTING_GUIDE.md  architecture.md  getting-started.md  index.md  project-evaluation.md  quick-test-guide.md  voice-interaction-guide.md
docs/development/: clawx-deep-migration-spec.md  clawx-gap-analysis.md  clawx-integration-plan.md  live2d-development-plan.md  live2d-fusion-design.md  page-migration-guide.md  voice-interaction-plan.md
docs/fixes/: audio-conversion-fix.md  live2d-transparency-analysis.md  live2d-transparency-implementation.md  tauri-communication-fix.md  websocket-asr-migration.md
docs/guides/: cicd-guide.md  tencent-cloud-voice-setup.md  testing-guide.md
docs/modules/: channels.md  gateway-integration.md  knowledge-rag.md  (+3 more)
src/: App.css  App.tsx  index.css  live2d-entry.ts  main.tsx  tauri-shim.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: live2d-window.json  main-window.json  spotlight-window.json
src-tauri/icons/: icon.icns
src-tauri/src/: CLAUDE.md  connection_tester.rs  lib.rs  logger.rs  main.rs  settings.rs  tencent_cloud.rs
src-tauri/src/a2a/: commands.rs  db.rs  types.rs
src-tauri/src/ai/: anthropic.rs  mod.rs  openai_compat.rs  types.rs
src-tauri/src/channels/: commands.rs  db.rs  manager.rs  mod.rs  types.rs
src-tauri/src/chat/: commands.rs  db.rs
src-tauri/src/cron/: commands.rs  db.rs  mod.rs  types.rs
src-tauri/src/knowledge/: commands.rs  db.rs  document_parser.rs  embedding.rs  mod.rs  pipeline.rs  text_chunker.rs  types.rs  web_scraper.rs
src-tauri/src/mcp/: builtin.rs  commands.rs  executor.rs  mod.rs  registry.rs  types.rs
src-tauri/src/openclaw/: clawhub.rs  commands.rs  mod.rs  router.rs  sidecar.rs  types.rs  ws.rs
src-tauri/src/skills/: commands.rs  db.rs  mod.rs  registry.rs  types.rs
src-tauri/src/workflow/: commands.rs  db.rs  engine.rs  mod.rs  types.rs
(+210 files in other folders)
