[package]
name = "reeftotem-assistant"
version = "0.3.0"
description = "A Tauri App"
authors = ["dannysun"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "reeftotem_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
image = "0.24"
# 腾讯云API依赖
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
url = "2.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
byteorder = "1.5"
lopdf = "0.32"
zip = "0.6"
quick-xml = "0.31"
scraper = "0.18"
regex = "1.10"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
async-trait = "0.1"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
urlencoding = "2.1"
dirs = "5"
